--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -19,7 +19,7 @@
     padding-left: 10%;
   }
 
-  & .name-header-right {
+  & #nav-bar {
     display: grid;
     align-items: center;
     justify-self: end;
