--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -19,18 +19,29 @@
     padding-left: 10%;
   }
 
-  & #nav-bar {
+  & .nav-box {
     display: grid;
     align-items: center;
-    justify-self: end;
+    justify-content: end;
     grid-template-columns: repeat(3, max-content);
     gap: 50px;
+    margin-right: 20px;
   }
 }
 
 a {
-  text-decoration: none;
-  color: black;
+	color: black;
+}
+
+a:hover {
+	color: black;
+	text-decoration: none;
+}
+
+ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
 }
 
 img {
