--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -12,6 +12,7 @@
   grid-template-columns: 1fr 1fr;
   align-items: center;
   z-index: 1;
+  max-height: 70px;
 
   & .name-header-left {
     display: grid;
@@ -26,6 +27,24 @@
     grid-template-columns: repeat(3, max-content);
     gap: 50px;
     margin-right: 20px;
+  }
+}
+
+#main {
+  position: relative;
+  top: 70px;
+
+  & .get_started {
+    display: grid;
+    justify-items: center;
+    padding: 50px 0px;
+
+    & #form {
+      display: grid;
+      grid-template-rows: 1fr 25px 30px;
+      justify-items: center;
+      gap: 10px;
+    }
   }
 }
 
@@ -49,4 +68,23 @@ img {
   width: 100%;
   display: block;
   margin: 0 auto;
+}
+
+input[type="submit"] {
+  background-color: #fc0;
+  border: none;
+  padding: 0px 30px 0px 30px;
+  text-decoration: none;
+  cursor: pointer;
+  font-size: 18px;
+  font-weight: 700;
+  color: black;
+}
+
+input[type="submit"]:hover {
+  background-color: orange;
+}
+
+input[type="email"] {
+  width: 300px;
 }
